TEST_PROGRAMS/INVALID/shao_kun_deng/invalid3.min
#interleaved if and while

if 1 then
	while 1 do
		1+1;
endif
	done
